# xmsmesher

./: CMakeLists.txt  build.py  conanfile.py  condabuildinfo.cmake
.github/workflows/: XmsMesher-CI.yaml
CMake/: xmsmesher-config.cmake
xmsmesher/meshing/: MeMeshUtils.h  MeMultiPolyMesher.h  MeMultiPolyTo2dm.h  MePolyMesher.h  MePolyRedistributePts.h
xmsmesher/meshing/detail/: MeBadQuadRemover.h  MeIntersectPolys.h  MePointConnectionFixer.h  MePolyCleaner.h  MePolyOffsetter.h  MePolyPatcher.h  MePolyPaverToMeshPts.h  MePolyPts.h  MePolyRedistributePtsCurvature.h  MeQuadBlossom.h  MeRefinePtsToPolys.h  MeRelaxer.h  MeWeightMatcher.h
